crates/weft-snapshots/tests/snapshots/slint/corpus-login.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: corpus-login as slint
---
// weft:source slint
// <screen id="login" label="Sign in" weft="0.1">
//   <form id="form" state="idle" on-submit="auth.submit">
//     <heading id="title" level="1">Sign in</heading>
//     <stack id="fields" gap="{token.space.md}">
//       <field id="email" label="Email" required="true" type="email" value="{$.email}"/>
//       <field id="password" label="Password" required="true" type="password" value="{$.password}"/>
//     </stack>
//     <button id="submit" disabled="{!$.email}" submit="true" variant="primary">Sign in</button>
//     <slot name="footer">
//       <link id="reset" on-press="nav.reset">Forgot password?</link>
//       <link id="signup" on-press="nav.signup">Create an account</link>
//     </slot>
//   </form>
// </screen>

import { Button, HorizontalBox, LineEdit, Palette, VerticalBox } from "std-widgets.slint";

export component LoginScreen inherits Window {
    title: "Sign in";
    in-out property <string> email;
    in-out property <string> password;
    callback perform(string, string);

    login := VerticalBox {
        alignment: LayoutAlignment.start;
        form := VerticalBox {
            title := Text {
                text: "Sign in";
                font-size: 32px;
                font-weight: 700;
            }
            fields := VerticalLayout {
                spacing: 16px;
                VerticalLayout {
                    Text { text: "Email"; }
                    email := LineEdit {
                        text <=> root.email;
                        accepted => { root.perform("auth.submit", "form"); }
                    }
                }
                VerticalLayout {
                    Text { text: "Password"; }
                    password := LineEdit {
                        input-type: InputType.password;
                        text <=> root.password;
                        accepted => { root.perform("auth.submit", "form"); }
                    }
                }
            }
            submit := Button {
                text: "Sign in";
                primary: true;
                enabled: root.email != "";
                clicked => { root.perform("auth.submit", "form"); }
            }
            HorizontalBox {
                reset := TouchArea {
                    clicked => { root.perform("nav.reset", "reset"); }
                    Text { text: "Forgot password?"; color: Palette.accent-background; }
                }
                signup := TouchArea {
                    clicked => { root.perform("nav.signup", "signup"); }
                    Text { text: "Create an account"; color: Palette.accent-background; }
                }
            }
        }
    }
}
