crates/weft-snapshots/tests/snapshots/slint/corpus-orders.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: corpus-orders as slint
---
// weft:source slint
// <screen id="orders" label="Orders" weft="0.1">
//   <heading id="title" level="2">Orders</heading>
//   <table id="open-orders" label="Open orders" state="ready">
//     <column id="col-id" sort="descending" on-press="orders.sortById">Order</column>
//     <column id="col-total" sort="none" text="{$.labels.total}"/>
//     <each id="order-each" as="order" in="{$.orders}">
//       <row id="order" selected="{$order.selected}" on-press="orders.open">
//         <cell id="order-id" text="{$order.id}"/>
//         <cell id="order-total">
//           <text id="order-amount" text="{$order.total}"/>
//         </cell>
//       </row>
//     </each>
//     <slot name="empty">
//       <text id="no-orders">No open orders.</text>
//     </slot>
//   </table>
//   <table id="archived" label="Archived orders" state="empty">
//     <column id="col-archived">Order</column>
//     <slot name="empty">
//       <text id="archived-empty">Nothing archived yet.</text>
//     </slot>
//   </table>
//   <table id="pending" label="Pending orders" state="loading">
//     <column id="col-pending">Order</column>
//     <row id="pending-row" selected="true">
//       <cell id="pending-cell">Fetching…</cell>
//     </row>
//   </table>
// </screen>

import { StandardTableView, VerticalBox } from "std-widgets.slint";

export component OrdersScreen inherits Window {
    title: "Orders";
    in-out property <string> labels-total;
    in-out property <[{ selected: bool, id: string, total: string }]> orders;
    callback perform(string, string);

    orders := VerticalBox {
        alignment: LayoutAlignment.start;
        title := Text {
            text: "Orders";
            font-size: 24px;
            font-weight: 700;
        }
        open-orders := VerticalLayout {
            StandardTableView {
                accessible-label: "Open orders";
                columns: [{ title: "Order", sort-order: SortOrder.descending }, { title: root.labels-total }];
                sort-ascending(column) => { if column == 0 { root.perform("orders.sortById", "col-id"); } }
                sort-descending(column) => { if column == 0 { root.perform("orders.sortById", "col-id"); } }
                row-pointer-event(row, event, position) => { if event.kind == PointerEventKind.up { root.perform("orders.open", "order"); } }
            }
            if root.orders.length == 0: VerticalLayout {
                no-orders := Text {
                    text: "No open orders.";
                }
            }
        }
        archived := VerticalLayout {
            StandardTableView {
                accessible-label: "Archived orders";
                columns: [{ title: "Order" }];
            }
            archived-empty := Text {
                text: "Nothing archived yet.";
            }
        }
        pending := StandardTableView {
            accessible-label: "Pending orders";
            columns: [{ title: "Order" }];
            rows: [[{ text: "Fetching…" }]];
            current-row: 0;
        }
    }
}
