crates/weft-snapshots/tests/snapshots/slint/corpus-settings.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: corpus-settings as slint
---
// weft:source slint
// <screen id="settings" label="Settings" weft="0.1">
//   <heading id="title" level="1">Settings</heading>
//   <section id="notifications" label="Notifications">
//     <heading id="notifications-title" level="2">Notifications</heading>
//     <switch id="email-alerts" checked="{$.emailAlerts}" label="Email alerts"/>
//     <switch id="push-alerts" checked="{$.pushAlerts}" label="Push notifications"/>
//   </section>
//   <section id="appearance" label="Appearance">
//     <heading id="appearance-title" level="2">Appearance</heading>
//     <select id="language" label="Language" value="{$.language}">
//       <option id="lang-en" value="en">English</option>
//       <option id="lang-de" value="de">Deutsch</option>
//       <option id="lang-fr" value="fr">Français</option>
//     </select>
//     <switch id="dark-mode" checked="{$.darkMode}" label="Dark mode"/>
//   </section>
//   <button id="save" disabled="{!$.dirty}" variant="primary" on-press="settings.save">Save changes</button>
// </screen>

import { Button, ComboBox, GroupBox, Switch, VerticalBox } from "std-widgets.slint";

export component SettingsScreen inherits Window {
    title: "Settings";
    in-out property <bool> emailAlerts;
    in-out property <bool> pushAlerts;
    in-out property <string> language;
    in-out property <bool> darkMode;
    in-out property <bool> dirty;
    callback perform(string, string);

    settings := VerticalBox {
        alignment: LayoutAlignment.start;
        title := Text {
            text: "Settings";
            font-size: 32px;
            font-weight: 700;
        }
        notifications := GroupBox {
            title: "Notifications";
            VerticalBox {
                notifications-title := Text {
                    text: "Notifications";
                    font-size: 24px;
                    font-weight: 700;
                }
                email-alerts := Switch {
                    text: "Email alerts";
                    checked <=> root.emailAlerts;
                }
                push-alerts := Switch {
                    text: "Push notifications";
                    checked <=> root.pushAlerts;
                }
            }
        }
        appearance := GroupBox {
            title: "Appearance";
            VerticalBox {
                appearance-title := Text {
                    text: "Appearance";
                    font-size: 24px;
                    font-weight: 700;
                }
                VerticalLayout {
                    Text { text: "Language"; }
                    language := ComboBox {
                        model: ["English", "Deutsch", "Français"];
                        current-index: root.language == "de" ? 1 : root.language == "fr" ? 2 : 0;
                        selected => { root.language = ["en", "de", "fr"][self.current-index]; }
                    }
                }
                dark-mode := Switch {
                    text: "Dark mode";
                    checked <=> root.darkMode;
                }
            }
        }
        save := Button {
            text: "Save changes";
            primary: true;
            enabled: root.dirty;
            clicked => { root.perform("settings.save", "save"); }
        }
    }
}
